--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,12 +1,16 @@
 # Database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #TODO set port for service database
-spring.datasource.url=jdbc:postgresql://localhost:7032/${database_name}
+spring.datasource.url=jdbc:postgresql://localhost:1032/${database_name}
 spring.datasource.username=${db_username}
 spring.datasource.password=${db_password}
 spring.sql.init.mode=always
 spring.jpa.show-sql=true
 spring.sql.init.continue-on-error=true
 spring.jpa.hibernate.ddl-auto=update
+
+
+course_service.url=http://app-course:2001/graphql
+content_service.url=http://app-content:4001/graphql
 
 
